Add theme/language switcher, routing, and i18n improvements
Introduces a theme and language selector in the layout, updates routing to use resolvers for settings, menu, and translations, and adds About and Contact pages. Refactors home and layout components for improved i18n and theme support, replaces image assets with local files, and enhances test coverage for i18n and UI. Removes unused SVG slides, updates mock data to use local images, and improves overall UI/UX and accessibility.

--- a/frontend/public/i18n/en.json
+++ b/frontend/public/i18n/en.json
@@ -43,7 +43,8 @@
   "nav": {
     "theme": "Theme",
     "light": "Light",
-    "dark": "Dark"
+    "dark": "Dark",
+    "language": "Language"
   },
   "lang": {
     "sk": "Slovak",
